# DJ_Lego

./: .gitignore  README.md  pyproject.toml  requirements.txt  run.py
djlego/: __init__.py  __main__.py  app.py
djlego/audio/: __init__.py  engine.py  loader.py
djlego/dsp/: __init__.py  blocks.py  chain.py  discretize.py  freqresp.py  polynomial.py
djlego/lego/: __init__.py  manager.py
djlego/ui/: __init__.py  controls.py  lego_panel.py  main.py  main_window.py  plots.py  theme.py
