[project]
name = "djlego"
version = "0.1.0"
description = "A real-time transfer-function DJ booth for ME130 — build a control block chain and hear it."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.0",
    "scipy>=1.13",
    "sounddevice>=0.5",  # PortAudio playback (wheel bundles PortAudio)
    "av>=12.0",          # PyAV: MP4/MP3 decode (wheel bundles ffmpeg)
    "PySide6>=6.6",      # Qt GUI
    "matplotlib>=3.8",   # embedded Bode / FFT plots
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]
# Optional: drive the knobs with LEGO Education motors/controllers over BLE.
# Pin >=1.0.6 (supports Python 3.11+); 1.0.5 needs 3.14 and breaks the lock.
lego = ["legoeducation>=1.0.6"]

[project.scripts]
djlego = "djlego.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["djlego"]
